--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Prerequisites
+-# Prerequisites
 *.d
 
 # Object files
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+**/.idea
+**/.vs
+**/cmake-build-debug
+CMakeLists.txt
